--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center|center_horizontal"
     android:orientation="vertical"
-    tools:context=".viewmodel.MainActivity">
+    tools:context=".view.MainActivity">
 
 
     <TextView
